--- a/src/App.css
+++ b/src/App.css
@@ -186,13 +186,14 @@
 
 .chat-window .chat-body .message .message-content {
   font-family: 'Nanum Gothic Coding', monospace;
+  font-size: 13px;
   width: auto;
   height: auto;
   min-height: 40px;
   max-width: 50vw;
-  background-color: rgb(255, 255, 255);
+  background-color: #263238;
   border-radius: 5px;
-  color: black;
+  color: white;
   display: flex;
   align-items: center;
   margin-right: 5px;
@@ -222,7 +223,7 @@
 
 #other .message-content {
   justify-content: flex-end;
-  background-color: cornflowerblue;
+  background-color: #ffc2a1be;
 }
 
 #other .message-meta {
